--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-body
+<link rel="stylesheet" type="text/css" href="~/Documents/GitHub/css-exercise-one/css/reset200802.css">
+<link rel="stylesheet" type="text/css" href="style.css">
+
+body {
   font-size: 14px;
 }
 
@@ -8,21 +11,22 @@ nav {
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+}
 
 section {
   margin: 0 auto;
   width: 60%;
 }
 
+
 h1 {
   font-family sans-serif;
   font-size: 2em;
 }
 
-.example, h3 {
+.example h3 {
   padding-top: 30px;
-  text-align center
+  text-align: center;
 }
 
 h3 {
@@ -34,3 +38,4 @@ h3 {
   height: 100px;
   margin 10px 0;
   width: 100%;
+}
