--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-<link rel="stylesheet" type="text/css" href="~/Documents/GitHub/css-exercise-one/css/reset200802.css">
-<link rel="stylesheet" type="text/css" href="style.css">
-/**I am not sure how to link the reset file to this. I think this is how? Not sure how to implement it. **/
 body {
   font-size: 14px;
 }
@@ -12,7 +9,7 @@ nav {
   position: fixed;
   width: 100%;
 }
-/**Originally, the nav section did not have a closing bracket **/
+
 section {
   margin: 0 auto;
   width: 60%;
@@ -20,20 +17,16 @@ section {
 
 
 h1 {
-  font-family sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
-}
-/**After example, there was an unecessary comma. I think there was no colon or semicolon in the text-align line somewhere**/
-.example h3 {
-  padding-top: 30px;
-  text-align: center;
 }
 
 h3 {
   font-size: 1.3em;
+  background-color: green;
 }
-/**Added a colon after margin**/
-.element {
+
+div class="new-element" {
   background-color: green;
   height: 100px;
   margin: 10px 0;
