--- a/css/style.css
+++ b/css/style.css
@@ -24,22 +24,15 @@ h3 {
   font-size: 1.3em;
 }
 
-.new-element-one {
+.element {
   background-color: green;
   height: 100px;
-  margin: 10px 0;
+  margin 10px 0;
   width: 100%;
 }
 
-.new-element-two {
-  background-color: green;
-  height: 100px;
-  margin: 10px 0;
-  width: 100%;
-}
-
-.new-element-three {
-  background-color: green;
+.new-element {
+  background-color: pink;
   height: 100px;
   margin: 10px 0;
   width: 100%;
